--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,58 +11,59 @@
   "dependencies": {
     "@progress/kendo-data-query": "^1.7.1",
     "@progress/kendo-drawing": "^1.21.2",
-    "@progress/kendo-licensing": "^1.6.0",
-    "@progress/kendo-react-animation": "^10.0.0",
-    "@progress/kendo-react-buttons": "^10.0.0",
-    "@progress/kendo-react-charts": "^10.0.0",
-    "@progress/kendo-react-common": "^10.0.0",
-    "@progress/kendo-react-conversational-ui": "^10.0.0",
-    "@progress/kendo-react-data-tools": "^10.0.0",
-    "@progress/kendo-react-dateinputs": "^10.0.0",
-    "@progress/kendo-react-dialogs": "^10.0.0",
-    "@progress/kendo-react-dropdowns": "^10.2.0",
-    "@progress/kendo-react-editor": "^10.0.0",
-    "@progress/kendo-react-excel-export": "^10.0.0",
-    "@progress/kendo-react-form": "^10.0.0",
-    "@progress/kendo-react-gantt": "^10.0.0",
-    "@progress/kendo-react-gauges": "^10.0.0",
-    "@progress/kendo-react-grid": "^10.0.0",
-    "@progress/kendo-react-indicators": "^10.2.0",
-    "@progress/kendo-react-inputs": "^10.0.0",
-    "@progress/kendo-react-intl": "^10.0.0",
-    "@progress/kendo-react-labels": "^10.0.0",
-    "@progress/kendo-react-layout": "^10.0.0",
-    "@progress/kendo-react-listbox": "^10.0.0",
-    "@progress/kendo-react-listview": "^10.0.0",
-    "@progress/kendo-react-map": "^10.0.0",
-    "@progress/kendo-react-notification": "^10.0.0",
-    "@progress/kendo-react-orgchart": "^10.0.0",
-    "@progress/kendo-react-pdf": "^10.0.0",
-    "@progress/kendo-react-pdf-viewer": "^10.0.0",
-    "@progress/kendo-react-pivotgrid": "^10.0.0",
-    "@progress/kendo-react-popup": "^10.0.0",
-    "@progress/kendo-react-progressbars": "^10.0.0",
-    "@progress/kendo-react-ripple": "^10.0.0",
-    "@progress/kendo-react-scheduler": "^10.0.0",
-    "@progress/kendo-react-scrollview": "^10.0.0",
-    "@progress/kendo-react-sortable": "^10.0.0",
-    "@progress/kendo-react-spreadsheet": "^10.0.0",
-    "@progress/kendo-react-taskboard": "^10.0.0",
-    "@progress/kendo-react-tooltip": "^10.0.0",
-    "@progress/kendo-react-treelist": "^10.0.0",
-    "@progress/kendo-react-treeview": "^10.0.0",
-    "@progress/kendo-react-upload": "^10.0.0",
+    "@progress/kendo-licensing": "^1.7.0",
+    "@progress/kendo-react-animation": "^12.1.0",
+    "@progress/kendo-react-buttons": "^12.1.0",
+    "@progress/kendo-react-charts": "^12.1.0",
+    "@progress/kendo-react-common": "^12.1.0",
+    "@progress/kendo-react-conversational-ui": "^12.1.0",
+    "@progress/kendo-react-data-tools": "^12.1.0",
+    "@progress/kendo-react-dateinputs": "^12.1.0",
+    "@progress/kendo-react-dialogs": "^12.1.0",
+    "@progress/kendo-react-dropdowns": "^12.1.0",
+    "@progress/kendo-react-editor": "^12.1.0",
+    "@progress/kendo-react-excel-export": "^12.1.0",
+    "@progress/kendo-react-form": "^12.1.0",
+    "@progress/kendo-react-gantt": "^12.1.0",
+    "@progress/kendo-react-gauges": "^12.1.0",
+    "@progress/kendo-react-grid": "^12.1.0",
+    "@progress/kendo-react-indicators": "^12.1.0",
+    "@progress/kendo-react-inputs": "^12.1.0",
+    "@progress/kendo-react-intl": "^12.1.0",
+    "@progress/kendo-react-labels": "^12.1.0",
+    "@progress/kendo-react-layout": "^12.1.0",
+    "@progress/kendo-react-listbox": "^12.1.0",
+    "@progress/kendo-react-listview": "^12.1.0",
+    "@progress/kendo-react-map": "^12.1.0",
+    "@progress/kendo-react-notification": "^12.1.0",
+    "@progress/kendo-react-orgchart": "^12.1.0",
+    "@progress/kendo-react-pdf": "^12.1.0",
+    "@progress/kendo-react-pdf-viewer": "^12.1.0",
+    "@progress/kendo-react-pivotgrid": "^12.1.0",
+    "@progress/kendo-react-popup": "^12.1.0",
+    "@progress/kendo-react-progressbars": "^12.1.0",
+    "@progress/kendo-react-ripple": "^12.1.0",
+    "@progress/kendo-react-scheduler": "^12.1.0",
+    "@progress/kendo-react-scrollview": "^12.1.0",
+    "@progress/kendo-react-sortable": "^12.1.0",
+    "@progress/kendo-react-spreadsheet": "^12.1.0",
+    "@progress/kendo-react-taskboard": "^12.1.0",
+    "@progress/kendo-react-tooltip": "^12.1.0",
+    "@progress/kendo-react-treelist": "^12.1.0",
+    "@progress/kendo-react-treeview": "^12.1.0",
+    "@progress/kendo-react-upload": "^12.1.0",
     "@progress/kendo-svg-icons": "^4.3.0",
-    "@progress/kendo-theme-bootstrap": "^11.0.2",
-    "@progress/kendo-theme-default": "^11.0.2",
-    "@progress/kendo-theme-material": "^11.0.2",
-    "@progress/kendo-theme-utils": "^11.0.2",
+    "@progress/kendo-theme-bootstrap": "^12.0.1",
+    "@progress/kendo-theme-default": "^12.0.1",
+    "@progress/kendo-theme-material": "^12.0.1",
+    "@progress/kendo-theme-utils": "^12.0.1",
     "axios": "^1.10.0",
-    "next": "^15.3.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "next": "^15.0.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "sass": "^1.89.2"
   }
 }
