--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@progress/kendo-theme-material": "^12.0.1",
     "@progress/kendo-theme-utils": "^12.0.1",
     "axios": "^1.10.0",
-    "next": "^15.0.3",
+    "next": "15.3.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
